[gd_scene load_steps=12 format=2]

[ext_resource path="res://MiMo/Editor/Cartridge_Section/Cartridge_Section.gd" type="Script" id=1]
[ext_resource path="res://MiMo/Common/Led/Led.tscn" type="PackedScene" id=2]
[ext_resource path="res://MiMo/Common/Cartridge_Slot/Cartridge_Slot.tscn" type="PackedScene" id=3]
[ext_resource path="res://MiMo/Editor/Cartridge_Section/Assets/material_slot.png" type="Texture" id=4]
[ext_resource path="res://MiMo/Common/Button/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://MiMo/Editor/Cartridge_Section/Assets/Lo_button_1@2x.png" type="Texture" id=6]
[ext_resource path="res://MiMo/Editor/Cartridge_Section/Assets/Lo_button_on@2x.png" type="Texture" id=7]
[ext_resource path="res://MiMo/Editor/Cartridge_Section/Assets/Med_button@2x.png" type="Texture" id=8]
[ext_resource path="res://MiMo/Editor/Cartridge_Section/Assets/Med_button_on_1@2x.png" type="Texture" id=9]
[ext_resource path="res://MiMo/Editor/Cartridge_Section/Assets/Hi_button@2x.png" type="Texture" id=10]
[ext_resource path="res://MiMo/Editor/Cartridge_Section/Assets/Hi_button_on_2@2x.png" type="Texture" id=11]

[node name="Cartridge_Section" type="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 994.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Mouse", "Rect" ]

[node name="Background" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Mouse" ]

[node name="Led_Indicator" parent="." index="1" instance=ExtResource( 2 )]

position = Vector2( 20, 32 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Cartridge_Slot" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 80, 1 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform" ]
InsertOffsetPosition = Vector2( 10, 10 )

[node name="Lo_Button" parent="." index="3" instance=ExtResource( 5 )]

margin_left = 580.0
margin_top = 1.0
margin_right = 680.0
margin_bottom = 113.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Med_Button" parent="." index="4" instance=ExtResource( 5 )]

margin_left = 700.0
margin_top = 1.0
margin_right = 800.0
margin_bottom = 113.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Hi_Button" parent="." index="5" instance=ExtResource( 5 )]

margin_left = 820.0
margin_top = 1.0
margin_right = 920.0
margin_bottom = 113.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
_sections_unfolded = [ "Rect", "Textures" ]


